Add cardinalityDescription to "make:property" script

--- a/.template/Property.hbs
+++ b/.template/Property.hbs
@@ -21,7 +21,7 @@ const VALUE: unique symbol = Symbol.for('value');
  * @see https://datatracker.ietf.org/doc/html/rfc6350#section-
  */
 export default class {{{capitalize property}}}Property implements Property {
-    static readonly CARDINALITY: Cardinality = '{{{cardinality}}}'; // ...
+    static readonly CARDINALITY: Cardinality = '{{{cardinality}}}'; // {{{cardinalityDescription}}}
 
     [VALUE]: string;
 
