Update constructor in property template

--- a/.template/Property.hbs
+++ b/.template/Property.hbs
@@ -58,7 +58,7 @@ export default class {{{capitalize property}}}Property extends Property {
             return;
         }
 
-        if (typeof config === 'string') {
+        if (isString(config)) {
             this.parameters = {};
             this[VALUE] = config;
 
