--- a/.template/Property.hbs
+++ b/.template/Property.hbs
@@ -1,6 +1,6 @@
 import isPlainObject from 'lodash.isplainobject';
 import isString from '../util/is-string';
-import { Cardinality } from '../types';
+import { Cardinality, Type } from '../types';
 import Property from './Property';
 
 export interface {{{capitalize property}}}Parameters {
@@ -14,7 +14,7 @@ export interface {{{capitalize property}}}Parameters {
     pid?: number | number[];
     pref?: number; // > Its value MUST be an integer between 1 and 100 that quantifies the level of preference.
     sortAs?: string;
-    type?: 'home' | 'work';
+    type?: Type;
     tz?: string;
 }
 
