--- a/.template/Property.hbs
+++ b/.template/Property.hbs
@@ -1,4 +1,3 @@
-import isPlainObject from 'lodash.isplainobject';
 import { Calscale, Cardinality, Type, Value } from '../types';
 import isString from '../util/is-string';
 import Property from './Property';
@@ -19,10 +18,7 @@ export interface {{{capitalize property}}}Parameters {
     tz?: string;
 }
 
-export interface {{{capitalize property}}}PropertyConfig {
-    value: string;
-    parameters?: {{{capitalize property}}}Parameters;
-}
+export type {{{capitalize property}}}PropertyConfig = [value: string, parameters?: {{{capitalize property}}}Parameters];
 
 export type {{{capitalize property}}}PropertyLike = {{{capitalize property}}}Property | {{{capitalize property}}}PropertyConfig | string;
 
@@ -52,32 +48,14 @@ export default class {{{capitalize property}}}Property extends Property {
 
     [VALUE]: string;
 
-    #objectConstructor(config: {{{capitalize property}}}PropertyConfig) {
-        const { value, parameters = {} } = config;
-        this.parameters = parameters;
-        this[VALUE] = value;
-
-        return this;
-    }
-
-    #stringConstructor(value: string) {
-        this[VALUE] = value;
-
-        return this;
-    }
-
-    constructor(config: {{{capitalize property}}}PropertyConfig | string) {
+    constructor(value: string, parameters: {{{capitalize property}}}Parameters = {}) {
         super();
 
-        if (isPlainObject(config)) {
-            return this.#objectConstructor(config as {{{capitalize property}}}PropertyConfig);
-        }
+        if (!isString(value))
+            throw new TypeError(`The value "${value}" is not a string type`);
 
-        if (isString(config)) {
-            return this.#stringConstructor(config);
-        }
-
-        throw new TypeError(`The value "${config}" is not a {{{capitalize property}}}PropertyConfig or string type`);
+        this.parameters = parameters;
+        this[VALUE] = value;
     }
 
     toString() {
@@ -91,7 +69,9 @@ export default class {{{capitalize property}}}Property extends Property {
     static factory(value: {{{capitalize property}}}PropertyLike): {{{capitalize property}}}Property {
         if (value instanceof {{{capitalize property}}}Property) return value;
 
-        if (isPlainObject(value) || isString(value)) return new {{{capitalize property}}}Property(value);
+        if (Array.isArray(value)) return new {{{capitalize property}}}Property(...value);
+
+        if (isString(value)) return new {{{capitalize property}}}Property(value);
 
         throw new TypeError(`The value "${value}" is not a {{{capitalize property}}}PropertyLike type`);
     }
