Update propery array spec template

--- a/.template/PropertyArray.spec.ts.hbs
+++ b/.template/PropertyArray.spec.ts.hbs
@@ -1,6 +1,6 @@
 import { expect } from 'chai';
-import {{{upperCamelCase property}}}Property from '../../lib/properties/{{{upperCamelCase property}}}Property';
-import {{{upperCamelCase property}}}PropertyArray from '../../lib/properties/arrays/{{{upperCamelCase property}}}PropertyArray';
+import {{{upperCamelCase property}}}Property from '../../../lib/properties/{{{upperCamelCase property}}}Property';
+import {{{upperCamelCase property}}}PropertyArray from '../../../lib/properties/arrays/{{{upperCamelCase property}}}PropertyArray';
 
 describe('{{{upperCamelCase property}}}PropertyArray', () => {
     it('is a function class', () => {
