Update class check specs

--- a/packages/vcard4-generator/.template/Property.spec.ts.hbs
+++ b/packages/vcard4-generator/.template/Property.spec.ts.hbs
@@ -2,8 +2,8 @@ import { expect } from 'chai';
 import {{{upperCamelCase property}}}Property, { {{{upperCamelCase property}}}PropertyRestConfig } from '../../lib/properties/{{{upperCamelCase property}}}Property';
 
 describe('{{{upperCamelCase property}}}Property', () => {
-    it('is a function class', () => {
-        expect({{{upperCamelCase property}}}Property).to.be.a('function');
+    it('is a class', () => {
+        expect({{{upperCamelCase property}}}Property).to.be.a('class');
     });
 
     describe('#toString()', () => {
