--- a/packages/vcard4-generator/.template/PropertyArray.spec.ts.hbs
+++ b/packages/vcard4-generator/.template/PropertyArray.spec.ts.hbs
@@ -3,8 +3,8 @@ import {{{upperCamelCase property}}}Property from '../../../lib/properties/{{{up
 import {{{upperCamelCase property}}}PropertyArray from '../../../lib/properties/arrays/{{{upperCamelCase property}}}PropertyArray';
 
 describe('{{{upperCamelCase property}}}PropertyArray', () => {
-    it('is a function class', () => {
-        expect({{{upperCamelCase property}}}PropertyArray).to.be.a('function');
+    it('is a class', () => {
+        expect({{{upperCamelCase property}}}PropertyArray).to.be.a('class');
     });
 
     describe('#push()', () => {
