--- a/packages/vcard4-generator/.template/PropertyArray.ts.hbs
+++ b/packages/vcard4-generator/.template/PropertyArray.ts.hbs
@@ -1,8 +1,8 @@
-import {{{upperCamelCase property}}}Property from '../{{{upperCamelCase property}}}Property';
+import {{{pascalCase property}}}Property from '../{{{pascalCase property}}}Property';
 
-export default class {{{upperCamelCase property}}}PropertyArray extends Array {
+export default class {{{pascalCase property}}}PropertyArray extends Array {
     push(...items: any[]): number {
-        items.forEach(item => super.push({{{upperCamelCase property}}}Property.factory(item)));
+        items.forEach(item => super.push({{{pascalCase property}}}Property.factory(item)));
 
         return this.length;
     }
